--- a/src/scss/_ContactError.scss
+++ b/src/scss/_ContactError.scss
@@ -21,7 +21,7 @@
       animation: bg-movement 4s infinite alternate;
       transition: all .5s ease;
 
-      &:hover {
+      &:hover, &:focus {
         transform: scale(1.1);
         transition: all .5s ease;
         text-shadow: none;
